fix contrast error

--- a/assets/style.css
+++ b/assets/style.css
@@ -101,7 +101,8 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	/* color: #fff; */
+	color: #333;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
